fix responsiveness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   width: 40%;
 }
 
+footer {
+  width: 40%;
+}
+
 @media only screen and (max-width: 600px) {
   #app {
     width: 95%;
