--- a/src/views/Workout/Workout.css
+++ b/src/views/Workout/Workout.css
@@ -21,7 +21,6 @@ footer {
     position: absolute;
     bottom: 3vh;
     margin: auto;
-    width: 40%;
 }
 
 .next {
